Bug 486118 - Two screens are not close to each other on X11
Summary: Two screens are not close to each other on X11
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: git-master
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-25 15:39 UTC by Fushan Wen
Modified: 2024-04-27 03:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma 6.1 and Spectacle 24.05
Sentry Crash Report:


Attachments
kscreen.png (1.45 MB, image/png)
2024-04-25 16:58 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Noah Davis 2024-04-25 16:04:25 UTC
Can you post a screenshot and your screen arrangement with resolutions and scale factors?
Comment 2 Noah Davis 2024-04-25 16:05:47 UTC
Also, X11 or wayland?
Comment 3 Noah Davis 2024-04-25 16:06:15 UTC
never mind the last question
Comment 4 Fushan Wen 2024-04-25 16:58:29 UTC
Created attachment 168900 [details]
kscreen.png
Comment 5 Bug Janitor Service 2024-04-25 20:33:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/355
Comment 6 Noah Davis 2024-04-25 22:17:18 UTC
Git commit bfbecb0720f18b3d0342670b76bd19bb5f42cec3 by Noah Davis.
Committed on 25/04/2024 at 20:32.
Pushed by ndavis into branch 'master'.

ImagePlatformKWin: Use logical positions for images in combinedImage on X11

M  +46   -21   src/Platforms/ImagePlatformKWin.cpp

https://invent.kde.org/graphics/spectacle/-/commit/bfbecb0720f18b3d0342670b76bd19bb5f42cec3
Comment 7 Noah Davis 2024-04-26 02:25:02 UTC
Git commit d1c15faa45ba1459009248555f41800a534c6844 by Noah Davis.
Committed on 26/04/2024 at 02:24.
Pushed by ndavis into branch 'release/24.05'.

ImagePlatformKWin: Use logical positions for images in combinedImage on X11
(cherry picked from commit bfbecb0720f18b3d0342670b76bd19bb5f42cec3)

M  +46   -21   src/Platforms/ImagePlatformKWin.cpp

https://invent.kde.org/graphics/spectacle/-/commit/d1c15faa45ba1459009248555f41800a534c6844