ImagePlatformKWin: Use logical positions for images in combinedImage on X11

BUG: 486118
(cherry picked from commit bfbecb0720f18b3d0342670b76bd19bb5f42cec3)